<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="all"
        android:menuCategory="alternative">
        <item
            android:id="@+id/rbDragDrop"
            android:title="@string/rb_label_dragdrop" />
        <item
            android:id="@+id/rbSwipeLDeletion"
            android:title="@string/rb_label_swipel_deletion" />
        <item
            android:id="@+id/rbSwipeREdition"
            android:title="@string/rb_label_swiper_edition" />
        <item
            android:id="@+id/rbTouchClick"
            android:title="@string/rb_label_touch_click" />
        <item
            android:id="@+id/showArchived"
            android:title="@string/rb_label_show_archived" />
        <item
            android:id="@+id/refresh_button"
            android:icon="@drawable/refresh"
            android:title="RefreshButton"
            app:showAsAction="always" />
        <item
            android:id="@+id/location_switch"
            android:title="Switch"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
        <item
            android:id="@+id/finish_shift"
            android:title="@string/end_shift"
            app:showAsAction="always" />
    </group>
</menu>

